# bibtui

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  bibtui.yaml  bibtui.yaml.example  build.rs
.github/workflows/: ci.yml  release.yml
src/: app.rs  lib.rs  main.rs
src/app/: actions.rs  mod.rs
src/bib/: citekey.rs  entry_types.rs  jabref.rs  mod.rs  model.rs  normalize.rs  parser.rs  writer.rs
src/config/: defaults.rs  loader.rs  mod.rs  schema.rs
src/search/: engine.rs  filter.rs  index.rs  mod.rs
src/tui/: event.rs  keybindings.rs  mod.rs  theme.rs
src/tui/components/: citation_preview.rs  command_palette.rs  dialog.rs  entry_detail.rs  entry_list.rs  field_editor.rs  group_tree.rs  help.rs  mod.rs  name_disambig.rs  search_bar.rs  settings.rs  status_bar.rs  validate_results.rs
src/tui/screens/: edit_screen.rs  main_screen.rs  mod.rs  settings_screen.rs
src/util/: author.rs  citation.rs  clipboard.rs  export.rs  journal.rs  latex.rs  mod.rs  open.rs  titlecase.rs  unicode.rs
src/util/import/: ans.rs  crossref.rs  fetcher.rs  isbn.rs  mod.rs  pdf.rs  pipeline.rs  tandfonline.rs
tests/: citekey_generation.rs  jabref_compat.rs  journal_abbreviation.rs  parser_edge_cases.rs  parser_roundtrip.rs
tests/fixtures/: complex_entries.bib  jabref_groups.bib  jabref_keypatterns.bib  minimal.bib  multi_file_a.bib  multi_file_b.bib  special_chars.bib  string_macros.bib
