[package]
name = "bibtui"
version = "0.8.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
indexmap = { version = "2", features = ["serde"] }
nucleo-matcher = "0.3"
unicode-width = "0.2"
regex = "1"
dirs = "6"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
