[package]
name = "bibtui"
version = "0.21.0"
edition = "2021"
description = "A terminal UI BibTeX manager"
license = "BSD-3-Clause"
homepage = "https://github.com/jkulesza/bibtui"
repository = "https://github.com/jkulesza/bibtui"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
indexmap = { version = "2", features = ["serde"] }
nucleo-matcher = "0.3"
unicode-width = "0.2"
regex = "1"
dirs = "6"
ureq = { version = "2", features = ["json"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/bibtui", dest = "/usr/bin/bibtui", mode = "755" },
]
