[package]
name = "bibtui"
version = "0.28.3"
edition = "2021"
description = "A terminal UI BibTeX manager"
license = "BSD-3-Clause"
homepage = "https://github.com/jkulesza/bibtui"
repository = "https://github.com/jkulesza/bibtui"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
indexmap = { version = "2", features = ["serde"] }
nucleo-matcher = "0.3"
unicode-width = "0.2"
regex = "1"
dirs = "6"
serde_json = "1"
isbn2 = "0.4.0"

# Use rustls (default) + native-tls (OS cert store) on non-musl platforms.
# native-tls alone with default-features=false fails at runtime ("no TLS backend configured").
# musl builds use rustls only (native-tls requires OpenSSL unavailable in musl cross-compilation).
[target.'cfg(not(target_env = "musl"))'.dependencies]
ureq = { version = "2", features = ["json", "native-tls"] }

[target.'cfg(target_env = "musl")'.dependencies]
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/bibtui", dest = "/usr/bin/bibtui", mode = "755" },
]
